[tool.poetry]
name = "MAKO"
version = "0.1.0"
description = "Mutable Autonomous Kinetic Object"
authors = ["WHEA Robotics"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
numpy = "2.1.3"
opencv-python = "<4.10"
wpilib = "^2025.0.1"
pynput = "^1.7.7"
rubicon-objc = "0.4.0"
pynetworktables = "^2021.0.0"
robotpy = "2025.1.1.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
graphviz = "^0.20.3"

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.1.1.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    "apriltag",
    "commands2",
    # "cscore",
    # "navx",
    # "pathplannerlib",
    # "phoenix5",
    "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    "rev",
    # "romi",
    "sim",
    # "xrp",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
